feature: OKCO#3 - Configuración de la aplicación para lanzarla desde la clase principal
- Creada la clase de configuración PropertyConfig para obtener las propiedades definidas en el fichero application.yaml

- Creada la clase de configuración LoggerConfig para configurar el nivel del log a traves del application.yaml.

- Creada la clase de configuración SpringConfig para la configuracion del contexto de Spring

- Creada la clase de configuración JettyServerConfig para establecer el puerto mediante el application.yaml

- Añadida la configuración necesaria en la clase Main para levantar la aplicación

- Eliminados los plugins de Maven de Jetty y Maven-war

- Añadidas dependencias Maven de Jetty y de Logback para configurar el servidor de Jetty y el logger

ISSUES: #4

--- a/oinkeep-rest/pom.xml
+++ b/oinkeep-rest/pom.xml
@@ -78,6 +78,12 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
 
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
     </dependencies>
 
 <!-- ############################################################################################################### -->
