--- a/oinkeep-boot/pom.xml
+++ b/oinkeep-boot/pom.xml
@@ -15,7 +15,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>oinkeep-boot</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>OinKeep - Boot Module</name>
     <description>Boot Module</description>
 
@@ -26,7 +26,6 @@
         <!-- Project -->
         <project.built.name>${project.artifactId}</project.built.name>
         <project.source.directory>src/main/java</project.source.directory>
-        <project.war.source.directory>src/main/webapp</project.war.source.directory>
 
     </properties>
 
@@ -94,6 +93,30 @@
             <artifactId>snakeyaml</artifactId>
         </dependency>
 
+        <!-- Jetty -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+        </dependency>
+
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 <!-- ############################################################################################################### -->
@@ -117,22 +140,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-            </plugin>
-
-            <!-- WAR Plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <failOnMissingWebXml>true</failOnMissingWebXml>
-                    <warSourceDirectory>${project.war.source.directory}</warSourceDirectory>
-                </configuration>
-            </plugin>
-
-            <!-- Jetty Plugin -->
-            <plugin>
-                <groupId>org.eclipse.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
             </plugin>
 
         </plugins>
