refactor: OKCO#5 - Se ha eliminado el ejemplo
- Se ha eliminado todo lo que tiene que ver con el ejemplo de prueba que se había realizado (TestService).

- Se ha renombrado el módulo "plugin" por "data".

- Se ha añadido la dependencia de "mockito-junit-jupiter" con la versión "5.6.0".

ISSUES: #8

--- a/oinkeep-boot/pom.xml
+++ b/oinkeep-boot/pom.xml
@@ -46,7 +46,7 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>oinkeep-plugin</artifactId>
+            <artifactId>oinkeep-data</artifactId>
         </dependency>
 
         <dependency>
