--- a/oinkeep-data/pom.xml
+++ b/oinkeep-data/pom.xml
@@ -14,7 +14,7 @@
 <!-- ############################################################################################################### -->
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>oinkeep-plugin</artifactId>
+    <artifactId>oinkeep-data</artifactId>
     <packaging>jar</packaging>
     <name>OinKeep - Plugin Module</name>
     <description>Plugin Module</description>
@@ -71,6 +71,11 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
 
     </dependencies>
