--- a/oinkeep-util/pom.xml
+++ b/oinkeep-util/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+        </dependency>
+
     </dependencies>
 
 <!-- ############################################################################################################### -->
