--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <module>oinkeep-util</module>
         <module>oinkeep-core</module>
         <module>oinkeep-rest</module>
-        <module>oinkeep-plugin</module>
+        <module>oinkeep-data</module>
         <module>oinkeep-boot</module>
     </modules>
 
@@ -80,7 +80,7 @@
 
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>oinkeep-plugin</artifactId>
+                <artifactId>oinkeep-data</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -173,6 +173,13 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${dep.mockito.version}</version>
+                <scope>test</scope>
+            </dependency>
+
             <!-- Jetty -->
             <dependency>
                 <groupId>org.eclipse.jetty</groupId>
@@ -237,6 +244,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.maven.surfire.version}</version>
                     <configuration>
+                        <argLine>-Xshare:off</argLine>
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
