chore: OKCO#8 - Establecer nueva desarrolladora en el proyecto
- Se añade una nueva desarrolladora en los README.md

- Se añade una nueva desarrolladora en los pom.xml

ISSUES: #12

--- a/oinkeep-boot/pom.xml
+++ b/oinkeep-boot/pom.xml
@@ -157,6 +157,11 @@
             <email>indenaiten@gmail.com</email>
         </developer>
 
+        <developer>
+            <name>Patricia Fernández González</name>
+            <email>patricia.fernandezgonz@gmail.com</email>
+        </developer>
+
     </developers>
 
 <!-- ############################################################################################################### -->
