--- a/oinkeep-core/pom.xml
+++ b/oinkeep-core/pom.xml
@@ -119,6 +119,11 @@
             <email>indenaiten@gmail.com</email>
         </developer>
 
+        <developer>
+            <name>Patricia Fernández González</name>
+            <email>patricia.fernandezgonz@gmail.com</email>
+        </developer>
+
     </developers>
 
 <!-- ############################################################################################################### -->
