--- a/oinkeep-util/pom.xml
+++ b/oinkeep-util/pom.xml
@@ -113,6 +113,11 @@
             <email>indenaiten@gmail.com</email>
         </developer>
 
+        <developer>
+            <name>Patricia Fernández González</name>
+            <email>patricia.fernandezgonz@gmail.com</email>
+        </developer>
+
     </developers>
 
 <!-- ############################################################################################################### -->
